--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,7 @@ title: Project Template
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>
-          <i class="ri-home-fill"></i>
-          New Project
-        </h1>
+        <h1>New Project</h1>
         <p>Check out the <a href="/examples/">Examples</a></p>
       </div>
     </div>
