--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,76 @@
 ---
 layout: page
-title: Project Template
+title: Kettle, Balancing Risk in a Changing Climate
 ---
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <h1>New Project</h1>
-        <p>Check out the <a href="/examples/">Examples</a></p>
+      <div class="col-12 col-md-6 editable">
+        <h1>Insurers can't predict the next climate crisis, but we are getting close</h1>
+        <p>Insurers can't predict the next climate crisis, but we are getting close</p>
+        <p>Schedule a demo of our latest fire prediction model</p>
+        <a class="btn">Book a Demo</a>
+      </div>
+      <div class="col-12 col-md-6">
+        [ IMAGE ]
       </div>
     </div>
   </div>
 </section>
 
-<section class="bg-secondary">
+
+<section>
   <div class="container">
     <div class="row">
       <div class="col-12">
-        {% include components/helloWorld.html %}
+        <h1></h1>
+      </div>
+      <div class="col-6 col-md-4 editable">
+        [ IMAGE ]
+        <p>Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
+      </div>
+      <div class="col-6 col-md-4  editable">
+        [ IMAGE ]
+        <p>Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
+      </div>
+      <div class="col-6 col-md-4 editable">
+        [ IMAGE ]
+        <p>As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12"><h1 class="editable">How Reinsurance Works</h1></div>
+    </div>
+    <div class="row">
+      <div class="col">
+        [ IMAGE ]
+        <p class="small">
+          Insurer
+          Customer
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-8">
+        <h1>We outperform the industry</h1>
+        <p>Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
+      </div>
+      <div class="col-4">
+        <h2>3 Tredecillion (3X1042)</h2>
+        <p class="small text-uppercase">
+          Calculations per Run
+        </p>
+        [ IMAGE ]
       </div>
     </div>
   </div>
