--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,9 @@ title: Kettle, Balancing Risk in a Changing Climate
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12"><h1 class="editable">How Reinsurance Works</h1></div>
+      <div class="col-12">
+        <h1 class="editable">How Reinsurance Works</h1>
+      </div>
     </div>
     <div class="row">
       <div class="col">
@@ -65,12 +67,41 @@ title: Kettle, Balancing Risk in a Changing Climate
         <h1>We outperform the industry</h1>
         <p>Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
       </div>
+    </div>
+    <div class="row">
       <div class="col-4">
-        <h2>3 Tredecillion (3X1042)</h2>
-        <p class="small text-uppercase">
+        <h2 class="editable">3 Tredecillion (3X1042)</h2>
+        <p class="small text-uppercase editable">
           Calculations per Run
         </p>
         [ IMAGE ]
+      </div>
+      <div class="col-4">
+        <h2 class="editable">42 Million</h2>
+        <p class="small text-uppercase editable">
+          Simulations
+        </p>
+        [ IMAGE ]
+      </div>
+      <div class="col-4">
+        <h2 class="editable">115,456</h2>
+        <p class="small text-uppercase editable">
+          Neural Network Nodes
+        </p>
+        [ IMAGE ]
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <h2 class="editable">Results in more accurate predictions</h2>
+      </div>
+      <div class="col-4">
+        <h3 class="editable">84.6%</h3>
+        <p class="editable">Kettle technology accuracy</p>
+      </div>
+      <div class="col-4">
+        <h3 class="editable">62.0%</h3>
+        <p class="editable">Industry Standard accuracy</p>
       </div>
     </div>
   </div>
