--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@ title: Kettle, Balancing Risk in a Changing Climate
 <section>
   <div class="container">
     <div class="row">
+      <div class="col-12">
+        <h1 class="editable">Insurers can't predict the next climate crisis,<br />but we are getting close</h1>
+
+      </div>
       <div class="col-12 col-md-6 editable">
-        <h1>Insurers can't predict the next climate crisis, but we are getting close</h1>
-        <p>Insurers can't predict the next climate crisis, but we are getting close</p>
-        <p>Schedule a demo of our latest fire prediction model</p>
-        <a class="btn">Book a Demo</a>
+        <p class="editable">Insurers can't predict the next climate crisis, but we are getting close</p>
+        <p class="editable">Schedule a demo of our latest fire prediction model</p>
+        <a class="btn editable">Book a Demo</a>
       </div>
       <div class="col-12 col-md-6">
         [ IMAGE ]
@@ -21,21 +24,24 @@ title: Kettle, Balancing Risk in a Changing Climate
 
 <section>
   <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1></h1>
+    <div class="row centered">
+      <div class="col-8">
+        <h1 class="editable text-center">We use deep learning to protect people and society from increasing climate crises</h1>
       </div>
+    </div>
+    <div class="row centered">
+
       <div class="col-6 col-md-4 editable">
         [ IMAGE ]
-        <p>Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
+        <p class="editable text-center">Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
       </div>
       <div class="col-6 col-md-4  editable">
         [ IMAGE ]
-        <p>Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
+        <p class="editable text-center">Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
       </div>
       <div class="col-6 col-md-4 editable">
         [ IMAGE ]
-        <p>As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
+        <p class="editable text-center">As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
       </div>
     </div>
   </div>
@@ -62,21 +68,24 @@ title: Kettle, Balancing Risk in a Changing Climate
 
 <section>
   <div class="container">
-    <div class="row">
-      <div class="col-12 col-8">
-        <h1>We outperform the industry</h1>
-        <p>Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
-      </div>
+    <div class="row centered text-center">
+            <div class="col-8">
+              <h1 class="editable ">We outperform the industry</h1>
+              <p class="editable ">Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
+            </div>
     </div>
     <div class="row">
-      <div class="col-4">
+
+    </div>
+    <div class="row text-center">
+      <div class="col-4 ">
         <h2 class="editable">3 Tredecillion (3X1042)</h2>
         <p class="small text-uppercase editable">
           Calculations per Run
         </p>
         [ IMAGE ]
       </div>
-      <div class="col-4">
+      <div class="col-4 ">
         <h2 class="editable">42 Million</h2>
         <p class="small text-uppercase editable">
           Simulations
@@ -91,17 +100,65 @@ title: Kettle, Balancing Risk in a Changing Climate
         [ IMAGE ]
       </div>
     </div>
-    <div class="row">
-      <div class="col-12">
-        <h2 class="editable">Results in more accurate predictions</h2>
+    <div class="row centered text-center">
+      <div class="col-12 ">
+        <h2 class="editable ">Results in more accurate predictions</h2>
       </div>
-      <div class="col-4">
+      <div class="col-4 ">
         <h3 class="editable">84.6%</h3>
         <p class="editable">Kettle technology accuracy</p>
       </div>
       <div class="col-4">
         <h3 class="editable">62.0%</h3>
         <p class="editable">Industry Standard accuracy</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <h1 class="editable">Predicting the California Wildfires</h1>
+        <p class="editable">Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.</p>
+        <a href="" class="btn">Book a Demo</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="row text-center centered">
+      <div class="col-8">
+        <h1 class="editable ">We better protect the world from increasing climate crises</h1>
+        <p class="editable ">It is our ambition to use data to change our world for the better. To better protect our communities for the next catastrophe. And to contribute to a future where we can mitigate future catastrophes. We are showing how reinsurance can be a lever to improve our world.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="team-wrapper">
+          <div class="team-photo">
+            [ IMAGE ]
+          </div>
+          <div class="team-bio">
+            <p>CEO</p>
+            <h2>Andrew Engler</h2>
+            <p>Andrew is an experienced executive with over a decade working in the insurtech and reinsurance space. Most recently he help found and led Argo Group’s Digital Division as VP of Digital. Before that, he was Commercial Field Sales Leader for Allstate and has had experience from ground level retail agencies, all the way up through complex mortgage derivative reinsurance pricing/structures. Spending his time between Bermuda and New York, Andrew is passionate about utilizing ground breaking machine learning to solve some of the most complex issues facing the Re/insurance world today.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <h1 class="editable">Contact us to Schedule a demo of our fire prediction model</h1>
+        <a href="" class="btn">Contact Us</a>
       </div>
     </div>
   </div>
