--- a/src/index.html
+++ b/src/index.html
@@ -2,52 +2,57 @@
 layout: page
 title: Kettle, Balancing Risk in a Changing Climate
 ---
-<section>
+<section id="intro-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <h1 class="editable">Insurers can't predict the next climate crisis,<br />but we are getting close</h1>
+      <div class="col-8">
+        <h1 class="editable">Insurers can't predict the next climate crisis, but we are getting close</h1>
 
       </div>
       <div class="col-12 col-md-6 editable">
-        <p class="editable">Insurers can't predict the next climate crisis, but we are getting close</p>
-        <p class="editable">Schedule a demo of our latest fire prediction model</p>
+        <h2 class="editable  my-4 pr-5">Kettle is building a better re/insurance model for balancing risk in a changing climate.</h2>
+        <p class="editable my-3">Schedule a demo of our latest fire prediction model</p>
         <a class="btn editable">Book a Demo</a>
       </div>
       <div class="col-12 col-md-6">
-        [ IMAGE ]
+        <div id="comp-wrapper">
+          <img class="img-fluid" src="/img/displays/kettle-header-desktop-display.png" />
+          <video autoplay loop>
+            <source src="/video/kettle-animation.webm" type="video/webm">
+          </video>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
 
-<section>
-  <div class="container">
+<section class="bg-gray ">
+  <div class="container py-5">
     <div class="row centered">
-      <div class="col-8">
+      <div class="col-7">
         <h1 class="editable text-center">We use deep learning to protect people and society from increasing climate crises</h1>
       </div>
     </div>
     <div class="row centered">
 
-      <div class="col-6 col-md-4 editable">
-        [ IMAGE ]
-        <p class="editable text-center">Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
+      <div class="col-6 col-md-4 editable text-center">
+        <img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" />
+        <p class="editable ">Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
       </div>
-      <div class="col-6 col-md-4  editable">
-        [ IMAGE ]
-        <p class="editable text-center">Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
+      <div class="col-6 col-md-4  editable text-center">
+        <img class="img-fluid my-3" alt="Underwriting Platform" src="/img/icons/kettle-icon-underwriting-platform.svg" />
+        <p class="editable ">Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
       </div>
-      <div class="col-6 col-md-4 editable">
-        [ IMAGE ]
-        <p class="editable text-center">As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
+      <div class="col-6 col-md-4 editable text-center">
+        <img class="img-fluid my-3" alt="Transfer Risk" src="/img/icons/kettle-icon-transfer-risk.svg" />
+        <p class="editable ">As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
       </div>
     </div>
   </div>
 </section>
 
-<section>
+<section class="bg-gray">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -66,51 +71,53 @@ title: Kettle, Balancing Risk in a Changing Climate
   </div>
 </section>
 
-<section>
+<section class="bg-black">
   <div class="container">
     <div class="row centered text-center">
-            <div class="col-8">
-              <h1 class="editable ">We outperform the industry</h1>
-              <p class="editable ">Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
-            </div>
+      <div class="col-7">
+        <h1 class="editable ">We outperform the industry</h1>
+        <p class=" text-white editable ">Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
+      </div>
     </div>
-    <div class="row">
+    <div class="row mt-5">
 
     </div>
     <div class="row text-center">
       <div class="col-4 ">
         <h2 class="editable">3 Tredecillion (3X1042)</h2>
-        <p class="small text-uppercase editable">
+        <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
-        [ IMAGE ]
+        <img class="img-fluid" src="/img/icons/kettle-icon-technology-3-tridecillion.svg" alt="Calculations" />
       </div>
       <div class="col-4 ">
         <h2 class="editable">42 Million</h2>
-        <p class="small text-uppercase editable">
+        <p class="small text-uppercase editable mb-0  text-white">
           Simulations
         </p>
-        [ IMAGE ]
+        <img class="img-fluid " src="/img/icons/kettle-icon-technology-simulations.svg" alt="Simulations" />
       </div>
       <div class="col-4">
         <h2 class="editable">115,456</h2>
-        <p class="small text-uppercase editable">
+        <p class="small text-uppercase editable mb-0 text-white">
           Neural Network Nodes
         </p>
-        [ IMAGE ]
+        <img class="img-fluid" src="/img/icons/kettle-icon-technology-network-nodes.svg" alt="Network Nodes" />
       </div>
     </div>
-    <div class="row centered text-center">
-      <div class="col-12 ">
-        <h2 class="editable ">Results in more accurate predictions</h2>
+    <div class="row centered text-center mt-5">
+      <div class="col-12  mb-3">
+        <h2 class="editable text-salmon">Results in more accurate predictions</h2>
       </div>
-      <div class="col-4 ">
-        <h3 class="editable">84.6%</h3>
-        <p class="editable">Kettle technology accuracy</p>
       </div>
-      <div class="col-4">
-        <h3 class="editable">62.0%</h3>
-        <p class="editable">Industry Standard accuracy</p>
+      <div class="row centered">
+      <div class="col-3 centered flex-column">
+        <h3 class="editable mb-0 text-large">84.6%</h3>
+        <p class="editable small text-salmon">Kettle technology accuracy</p>
+      </div>
+      <div class="col-3 centered flex-column">
+        <h3 class="editable text-large mb-0">62.0%</h3>
+        <p class="editable small text-salmon">Industry Standard accuracy</p>
       </div>
     </div>
   </div>
