--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 ---
 layout: page
 title: Kettle, Balancing Risk in a Changing Climate
+team_member:
+- name:
+title:
+image:
 ---
 <section id="intro-wrapper">
   <div class="container">
@@ -27,7 +31,7 @@ title: Kettle, Balancing Risk in a Changing Climate
 </section>
 
 
-<section class="bg-gray ">
+<section class="bg-gray pt-0">
   <div class="container py-5">
     <div class="row centered">
       <div class="col-7">
@@ -109,8 +113,8 @@ title: Kettle, Balancing Risk in a Changing Climate
       <div class="col-12  mb-3">
         <h2 class="editable text-salmon">Results in more accurate predictions</h2>
       </div>
-      </div>
-      <div class="row centered">
+    </div>
+    <div class="row centered">
       <div class="col-3 centered flex-column">
         <h3 class="editable mb-0 text-large">84.6%</h3>
         <p class="editable small text-salmon">Kettle technology accuracy</p>
@@ -123,19 +127,27 @@ title: Kettle, Balancing Risk in a Changing Climate
   </div>
 </section>
 
-<section>
+<section class="bg-black" style="background: url(/img/backgrounds/bg-space-top.svg); background-size: 100% auto; background-position: center bottom; background-repeat: no-repeat; ">
   <div class="container">
-    <div class="row">
-      <div class="col-12 col-md-6">
+    <div class="row centered">
+      <div class="col-12 col-md-5">
         <h1 class="editable">Predicting the California Wildfires</h1>
-        <p class="editable">Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.</p>
+        <p class="editable text-white">Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.</p>
         <a href="" class="btn">Book a Demo</a>
+      </div>
+      <div class="col-12 col-md-7">
+        <div id="kettle-tablet-wrapper">
+          <!-- <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" /> -->
+         </div>
+
+
       </div>
     </div>
   </div>
+
 </section>
 
-<section>
+<section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; ">
   <div class="container">
     <div class="row text-center centered">
       <div class="col-8">
@@ -147,25 +159,27 @@ title: Kettle, Balancing Risk in a Changing Climate
       <div class="col-12">
         <div class="team-wrapper">
           <div class="team-photo">
-            [ IMAGE ]
           </div>
-          <div class="team-bio">
-            <p>CEO</p>
-            <h2>Andrew Engler</h2>
-            <p>Andrew is an experienced executive with over a decade working in the insurtech and reinsurance space. Most recently he help found and led Argo Group’s Digital Division as VP of Digital. Before that, he was Commercial Field Sales Leader for Allstate and has had experience from ground level retail agencies, all the way up through complex mortgage derivative reinsurance pricing/structures. Spending his time between Bermuda and New York, Andrew is passionate about utilizing ground breaking machine learning to solve some of the most complex issues facing the Re/insurance world today.</p>
+          <div class="bio-wrapper centered">
+            <div class="team-bio">
+              <p>CEO</p>
+              <h2>Andrew Engler</h2>
+              <p>Andrew is an experienced executive with over a decade working in the insurtech and reinsurance space. Most recently he help found and led Argo Group’s Digital Division as VP of Digital. Before that, he was Commercial Field Sales Leader for Allstate and has had experience from ground level retail agencies, all the way up through complex mortgage derivative reinsurance pricing/structures. Spending his time between Bermuda and New York, Andrew is passionate about utilizing ground breaking machine learning to solve some of the most complex issues facing the Re/insurance world today.</p>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section>
+<section id="contact-wrapper">
   <div class="container">
-    <div class="row">
-      <div class="col-8">
+    <div class="row centered">
+      <div class="col-8 text-center">
         <h1 class="editable">Contact us to Schedule a demo of our fire prediction model</h1>
-        <a href="" class="btn">Contact Us</a>
+        <a href="" class="btn mt-4 bg-orange">Contact Us</a>
       </div>
     </div>
   </div>
