--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 layout: page
 title: Kettle, Balancing Risk in a Changing Climate
 team_member:
-- name:
-title:
-image:
+  - name:
+    title:
+    image:
 ---
 <section id="intro-wrapper">
   <div class="container">
@@ -31,7 +31,7 @@ image:
 </section>
 
 
-<section class="bg-gray pt-0">
+<section class="bg-gray pt-0" id="our-solutions">
   <div class="container py-5">
     <div class="row centered">
       <div class="col-7">
@@ -57,25 +57,62 @@ image:
 </section>
 
 <section class="bg-gray">
-  <div class="container">
+  <div class="container p-5" id="how-reinsurance-works">
     <div class="row">
       <div class="col-12">
         <h1 class="editable">How Reinsurance Works</h1>
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        [ IMAGE ]
+
+      <div class="col || d-flex flex-column justify-content-between">
+        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
+        <div class="bg-gray px-3 py-2 wrapper">
+          <p class="small text-uppercase text-salmon text-bold mb-0">
+            Insurer
+          </p>
+          <p class="small m-0">
+            Customer
+          </p>
+        </div>
+      </div>
+
+      <div class="col || d-flex flex-column justify-content-between">
+        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
         <p class="small">
-          Insurer
-          Customer
+          Insurers buy reinsurance from Kettle.
         </p>
       </div>
+      <div class="col || d-flex flex-column justify-content-between">
+        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
+        <p class="small">
+          We use our models to analyze their portfolios, and then charge them the calculated premium to reinsure their risk.
+        </p>
+      </div>
+      <div class="col || d-flex flex-column justify-content-between">
+        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
+        <p class="small">
+          Because our models are more accurate, we can offer more competitive pricing. </p>
+      </div>
+
+      <div class="col || d-flex flex-column justify-content-between">
+        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
+        <div class="bg-gray p-2">
+          <p class="small text-uppercase text-salmon text-bold mb-0">
+            KETTLE
+          </p>
+          <P class="text-black ">Transfers Risk to Buyers</P>
+          <p class="small">
+            We transfer that risk to buyers through Kettle’s network market for capital markets, retros, and reinsurers.
+          </p>
+        </div>
+      </div>
+
+
     </div>
-  </div>
 </section>
 
-<section class="bg-black">
+<section class="bg-black" id="kettle-technology">
   <div class="container">
     <div class="row centered text-center">
       <div class="col-7">
@@ -138,7 +175,7 @@ image:
       <div class="col-12 col-md-7">
         <div id="kettle-tablet-wrapper">
           <!-- <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" /> -->
-         </div>
+        </div>
 
 
       </div>
@@ -147,7 +184,7 @@ image:
 
 </section>
 
-<section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; ">
+<section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; " id="our-team">
   <div class="container">
     <div class="row text-center centered">
       <div class="col-8">
@@ -179,7 +216,7 @@ image:
     <div class="row centered">
       <div class="col-8 text-center">
         <h1 class="editable">Contact us to Schedule a demo of our fire prediction model</h1>
-        <a href="" class="btn mt-4 bg-orange">Contact Us</a>
+        <a href="" class="btn mt-4 btn-orange">Contact Us</a>
       </div>
     </div>
   </div>
