--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@ team_member:
 </section>
 
 
-<section class="bg-gray pt-0" id="our-solutions">
-  <div class="container py-5">
+<section class="bg-gray pt-3" id="our-solutions">
+  <div class="container pb-5">
     <div class="row centered">
       <div class="col-7">
         <h1 class="editable text-center">We use deep learning to protect people and society from increasing climate crises</h1>
       </div>
     </div>
-    <div class="row centered">
+    <div class="row centered align-items-baseline">
 
       <div class="col-6 col-md-4 editable text-center">
         <img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" />
@@ -63,49 +63,50 @@ team_member:
         <h1 class="editable">How Reinsurance Works</h1>
       </div>
     </div>
-    <div class="row">
+    <div class="row ">
 
-      <div class="col || d-flex flex-column justify-content-between">
+      <div class="col-12 col-lg ||  stage-step" id="step-1">
         <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
         <div class="bg-gray px-3 py-2 wrapper">
           <p class="small text-uppercase text-salmon text-bold mb-0">
             Insurer
           </p>
-          <p class="small m-0">
+          <p class="text-black  m-0">
             Customer
           </p>
         </div>
       </div>
 
-      <div class="col || d-flex flex-column justify-content-between">
+      <div class="col-12 col-lg || stage-step" id="step-2">
         <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
         <p class="small">
           Insurers buy reinsurance from Kettle.
         </p>
       </div>
-      <div class="col || d-flex flex-column justify-content-between">
+      <div class="col-12 col-lg || stage-step" id="step-3">
         <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
         <p class="small">
           We use our models to analyze their portfolios, and then charge them the calculated premium to reinsure their risk.
         </p>
       </div>
-      <div class="col || d-flex flex-column justify-content-between">
+      <div class="col-12 col-lg || stage-step" id="step-4">
         <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
         <p class="small">
           Because our models are more accurate, we can offer more competitive pricing. </p>
       </div>
 
-      <div class="col || d-flex flex-column justify-content-between">
+      <div class="col-12 col-lg || stage-step" id="step-5">
         <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
         <div class="bg-gray p-2">
           <p class="small text-uppercase text-salmon text-bold mb-0">
             KETTLE
           </p>
           <P class="text-black ">Transfers Risk to Buyers</P>
-          <p class="small">
-            We transfer that risk to buyers through Kettle’s network market for capital markets, retros, and reinsurers.
-          </p>
+
         </div>
+        <p class="small">
+          We transfer that risk to buyers through Kettle’s network market for capital markets, retros, and reinsurers.
+        </p>
       </div>
 
 
@@ -175,6 +176,9 @@ team_member:
       <div class="col-12 col-md-7">
         <div id="kettle-tablet-wrapper">
           <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
+          <video autoplay loop>
+            <source src="/video/intro_gtpgsr.mp4" type="video/mp4">
+          </video>
         </div>
 
 
@@ -189,7 +193,7 @@ team_member:
 </section>
 
 
-<section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; " id="our-team" class="bg-gray">
+<section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; margin-top: -1px;" id="our-team" class="bg-gray">
   <div class="container">
     <div class="row text-center centered py-5">
       <div class="col-8">
