team member data model

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@ title: Kettle, Balancing Risk in a Changing Climate
 team_member:
   - name:
     title:
+    bio_html:
     image:
 ---
 <section id="intro-wrapper">
