Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,44 @@
 ---
 layout: page
-title: Kettle, Balancing Risk in a Changing Climate
+title: 'Kettle, Balancing Risk in a Changing Climate'
 team_member:
-  - name:
-    title:
-    bio_html:
-    image:
+  - name: Andrew Engler
+    title: CEO
+    bio_html: >-
+      <p>Andrew is an experienced executive with over a decade working in the
+      insurtech and reinsurance space. Most recently he help found and led Argo
+      Group&rsquo;s Digital Division as VP of Digital. Before that, he was
+      Commercial Field Sales Leader for Allstate and has had experience from
+      ground level retail agencies, all the way up through complex mortgage
+      derivative reinsurance pricing/structures. Spending his time between
+      Bermuda and New York, Andrew is passionate about utilizing ground breaking
+      machine learning to solve some of the most complex issues facing the
+      Re/insurance world today.</p>
+    image: /img/Images/team-headshot-andrew.jpg
+  - name: Nat Manning
+    title: COO
+    bio_html: >-
+      <p>Nathaniel previously led Ushahidi, the world&rsquo;s largest open
+      source data platform for crisis response. Here he helped scale the
+      Ushahidi platform to over 200 countries gathering over 10M first hand
+      reports. Previous to that he was a Presidential Innovation Fellow for Open
+      Data, and then the first Chief Data Officer of the US Agency for
+      International Development, where he helped open up and analyze large data
+      sets for humanitarian response. He has been part of the founding teams of
+      technology startups like BRCK and FellowAI.</p>
+    image: /img/Images/team-headshot-nat.jpg
+  - name: Son Le
+    title: CTO
+    bio_html: >-
+      <p>Son Le is an applied Mathematician with a graduate degree from Courant
+      Institute of Mathematical Sciences - New York University. His early
+      research focused in stochastic processes and algorithmic high-frequency
+      trading. Most recently he served as Head Quant at Argo Group&rsquo;s
+      Digital Division. Son&rsquo;s more recent works focus in Deep Learning and
+      its application in credit risk and catastrophic risk.</p>
+    image: /img/Images/team-headshot-son.jpg
 ---
+
 <section id="intro-wrapper">
   <div class="container">
     <div class="row">
@@ -23,7 +55,7 @@ team_member:
         <div id="comp-wrapper">
           <img class="img-fluid" src="/img/displays/kettle-header-desktop-display.png" />
           <video autoplay loop>
-            <source src="/video/kettle-animation.webm" type="video/webm">
+            <source src="/video/kettle-animation.webm" type="video/webm" />
           </video>
         </div>
       </div>
@@ -102,7 +134,7 @@ team_member:
           <p class="small text-uppercase text-salmon text-bold mb-0">
             KETTLE
           </p>
-          <P class="text-black ">Transfers Risk to Buyers</P>
+          <p class="text-black ">Transfers Risk to Buyers</p>
 
         </div>
         <p class="small">
@@ -112,7 +144,7 @@ team_member:
 
 
     </div>
-</section>
+</div></section>
 
 <section class="bg-black" id="kettle-technology">
   <div class="container pt-5">
@@ -178,7 +210,7 @@ team_member:
         <div id="kettle-tablet-wrapper">
           <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
           <video autoplay loop>
-            <source src="/video/intro_gtpgsr.mp4" type="video/mp4">
+            <source src="/video/intro_gtpgsr.mp4" type="video/mp4" />
           </video>
         </div>
 
