--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@ team_member:
 
 
 <section class="bg-gray pt-3" id="our-solutions">
-  <div class="container pb-5">
+  <div class="container ">
     <div class="row centered">
       <div class="col-7">
         <h1 class="editable text-center">We use deep learning to protect people and society from increasing climate crises</h1>
@@ -90,7 +90,7 @@ team_member:
   </div>
 </section>
 
-<section class="bg-gray">
+<section class="bg-gray pt-0">
   <div class="container p-5 mb-5" id="how-reinsurance-works">
     <div class="row">
       <div class="col-12">
@@ -188,13 +188,13 @@ team_member:
     </div>
     <div class="row centered mb-5">
       <div class="col-3 centered flex-column">
-        <h3 class="editable mb-0 text-large">84.6%</h3>
+        <h3 class="editable mb-0 text-xl">84.6%</h3>
         <p class="editable small text-salmon">Kettle technology accuracy</p>
       </div>
-      <div class="col-3 centered flex-column">
+      <!-- <div class="col-3 centered flex-column">
         <h3 class="editable text-large mb-0">62.0%</h3>
         <p class="editable small text-salmon">Industry Standard accuracy</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
@@ -205,7 +205,7 @@ team_member:
       <div class="col-12 col-md-5">
         <h1 class="editable">Predicting the California Wildfires</h1>
         <p class="editable text-white">Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.</p>
-        <a href="" class="btn" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
+        <a href="" class="btn animated-border" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
       </div>
       <div class="col-12 col-md-7">
         <div id="kettle-tablet-wrapper">
@@ -235,22 +235,30 @@ team_member:
         <p class="editable ">It is our ambition to use data to change our world for the better. To better protect our communities for the next catastrophe. And to contribute to a future where we can mitigate future catastrophes. We are showing how reinsurance can be a lever to improve our world.</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="team-wrapper">
-          <div class="team-photo">
+<div class="row">
+{% for member in page.team_member %}
+<div class="col-12   mb-5">
+    <div class="row mb-5 h-100  bg-white centered">
+
+          <div class="col-12 col-lg-4 px-0 h-100 d-none d-lg-flex {% cycle 'order-first','order-last' %}">
+              <div class="team-photo h-100 w-100" >
+                <div class="h-100"  style="background-image: url({{ member.image }});"></div>
+              </div>
           </div>
-          <div class="bio-wrapper centered">
-            <div class="team-bio">
-              <p>CEO</p>
-              <h2>Andrew Engler</h2>
-              <p>Andrew is an experienced executive with over a decade working in the insurtech and reinsurance space. Most recently he help found and led Argo Group’s Digital Division as VP of Digital. Before that, he was Commercial Field Sales Leader for Allstate and has had experience from ground level retail agencies, all the way up through complex mortgage derivative reinsurance pricing/structures. Spending his time between Bermuda and New York, Andrew is passionate about utilizing ground breaking machine learning to solve some of the most complex issues facing the Re/insurance world today.</p>
-            </div>
+          <div class="col-12 col-lg-8 p-3 p-sm-5  team-bio h-100 w-100 centered flex-column align-items-baseline animated-border">
+                    <p class="title">{{ member.title }}</p>
+                    <h2>{{ member.name }}</h2>
+                    {{ member.bio_html }}
+
           </div>
 
-        </div>
-      </div>
+
+
     </div>
+    </div>
+    {% endfor %}
+  </div>
+
   </div>
 </section>
 
@@ -258,7 +266,7 @@ team_member:
   <div class="container">
     <div class="row centered">
       <div class="col-8 text-center">
-        <h1 class="editable">Contact us to Schedule a demo of our fire prediction model</h1>
+        <h1 class="editable">Contact us to Schedule a Demo of our Fire Prediction Model</h1>
         <a href="" class="btn mt-4 btn-orange" data-toggle="modal" data-target="#demoModal">Contact Us</a>
       </div>
     </div>
@@ -273,7 +281,7 @@ team_member:
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+          <span aria-hidden="true"></span>
         </button>
       </div>
       <div class="modal-body">
