--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@ team_member:
 <section id="intro-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-8">
+      <div class=" col-12 col-md-8">
         <h1 class="editable">Insurers can't predict the next climate crisis, but we are getting close</h1>
 
       </div>
@@ -65,7 +65,7 @@ team_member:
 
 
 
-<section class="bg-gray pt-3" id="our-solutions">
+<section class="bg-gray pt-5" id="our-solutions">
   <div class="container ">
     <div class="row centered">
       <div class="col-7">
@@ -159,21 +159,21 @@ team_member:
 
     </div>
     <div class="row text-center">
-      <div class="col-4 ">
+      <div class="col-12 col-md-4 ml-5 ml-md-auto my-5 my-md-auto">
         <h2 class="editable">3 Tredecillion (3X1042)</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
         <img class="img-fluid" src="/img/icons/kettle-icon-technology-3-tridecillion.svg" alt="Calculations" />
       </div>
-      <div class="col-4 ">
+      <div class="col-12 col-md-4 ml-n5 ml-md-auto my-5 my-md-auto">
         <h2 class="editable">42 Million</h2>
         <p class="small text-uppercase editable mb-0  text-white">
           Simulations
         </p>
         <img class="img-fluid " src="/img/icons/kettle-icon-technology-simulations.svg" alt="Simulations" />
       </div>
-      <div class="col-4">
+      <div class="col-12 col-md-4 ml-5 ml-md-auto my-5 my-md-auto">
         <h2 class="editable">115,456</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Neural Network Nodes
@@ -189,7 +189,7 @@ team_member:
     <div class="row centered mb-5">
       <div class="col-3 centered flex-column">
         <h3 class="editable mb-0 text-xl">84.6%</h3>
-        <p class="editable small text-salmon">Kettle technology accuracy</p>
+        <p class="editable small text-salmon text-center">Kettle technology accuracy</p>
       </div>
       <!-- <div class="col-3 centered flex-column">
         <h3 class="editable text-large mb-0">62.0%</h3>
