--- a/src/index.html
+++ b/src/index.html
@@ -68,21 +68,21 @@ team_member:
 <section class="bg-gray pt-5" id="our-solutions">
   <div class="container ">
     <div class="row centered">
-      <div class="col-7">
+      <div class="col-12 col-md-8">
         <h1 class="editable text-center">We use deep learning to protect people and society from increasing climate crises</h1>
       </div>
     </div>
     <div class="row centered align-items-baseline">
 
-      <div class="col-6 col-md-4 editable text-center">
+      <div class="col-12 col-md-4 editable text-center">
         <img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" />
         <p class="editable ">Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
       </div>
-      <div class="col-6 col-md-4  editable text-center">
+      <div class="col-12 col-md-4  editable text-center">
         <img class="img-fluid my-3" alt="Underwriting Platform" src="/img/icons/kettle-icon-underwriting-platform.svg" />
         <p class="editable ">Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
       </div>
-      <div class="col-6 col-md-4 editable text-center">
+      <div class="col-12 col-md-4 editable text-center">
         <img class="img-fluid my-3" alt="Transfer Risk" src="/img/icons/kettle-icon-transfer-risk.svg" />
         <p class="editable ">As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
       </div>
@@ -150,7 +150,7 @@ team_member:
 <section class="bg-black" id="kettle-technology">
   <div class="container pt-5">
     <div class="row centered text-center">
-      <div class="col-7">
+      <div class="col-12 col-md-7">
         <h1 class="editable ">We outperform the industry</h1>
         <p class=" text-white editable ">Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
       </div>
@@ -159,21 +159,21 @@ team_member:
 
     </div>
     <div class="row text-center">
-      <div class="col-12 col-md-4 ml-5 ml-md-auto my-5 my-md-auto">
+      <div class="col-12 col-md-4  my-4 my-md-auto">
         <h2 class="editable">3 Tredecillion (3X1042)</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
         <img class="img-fluid" src="/img/icons/kettle-icon-technology-3-tridecillion.svg" alt="Calculations" />
       </div>
-      <div class="col-12 col-md-4 ml-n5 ml-md-auto my-5 my-md-auto">
+      <div class="col-12 col-md-4 my-4 my-md-auto">
         <h2 class="editable">42 Million</h2>
         <p class="small text-uppercase editable mb-0  text-white">
           Simulations
         </p>
         <img class="img-fluid " src="/img/icons/kettle-icon-technology-simulations.svg" alt="Simulations" />
       </div>
-      <div class="col-12 col-md-4 ml-5 ml-md-auto my-5 my-md-auto">
+      <div class="col-12 col-md-4  my-4  my-md-auto">
         <h2 class="editable">115,456</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Neural Network Nodes
@@ -182,12 +182,12 @@ team_member:
       </div>
     </div>
     <div class="row centered text-center mt-5">
-      <div class="col-12  mb-3">
+      <div class="col-12  mb-8">
         <h2 class="editable text-salmon">Results in more accurate predictions</h2>
       </div>
     </div>
-    <div class="row centered mb-5">
-      <div class="col-3 centered flex-column">
+    <div class="row centered mb-8">
+      <div class="col-6 centered flex-column">
         <h3 class="editable mb-0 text-xl">84.6%</h3>
         <p class="editable small text-salmon text-center">Kettle technology accuracy</p>
       </div>
@@ -230,7 +230,7 @@ team_member:
 <section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; margin-top: -1px;" id="our-team" class="bg-gray">
   <div class="container">
     <div class="row text-center centered py-5">
-      <div class="col-8">
+      <div class="col-12 col-md-8">
         <h1 class="editable ">We better protect the world from increasing climate crises</h1>
         <p class="editable ">It is our ambition to use data to change our world for the better. To better protect our communities for the next catastrophe. And to contribute to a future where we can mitigate future catastrophes. We are showing how reinsurance can be a lever to improve our world.</p>
       </div>
@@ -238,7 +238,7 @@ team_member:
 <div class="row">
 {% for member in page.team_member %}
 <div class="col-12   mb-5">
-    <div class="row mb-5 h-100  bg-white centered">
+    <div class="row mb-5 h-100  bg-white centered mx-3 mx-md-auto">
 
           <div class="col-12 col-lg-4 px-0 h-100 d-none d-lg-flex {% cycle 'order-first','order-last' %}">
               <div class="team-photo h-100 w-100" >
@@ -265,7 +265,7 @@ team_member:
 <section id="contact-wrapper">
   <div class="container">
     <div class="row centered">
-      <div class="col-8 text-center">
+      <div class="col-10 col-md-8 text-center">
         <h1 class="editable">Contact us to Schedule a Demo of our Fire Prediction Model</h1>
         <a href="" class="btn mt-4 btn-orange" data-toggle="modal" data-target="#demoModal">Contact Us</a>
       </div>
