--- a/src/index.html
+++ b/src/index.html
@@ -39,15 +39,15 @@ team_member:
     image: /img/Images/team-headshot-son.jpg
 ---
 
-<section id="intro-wrapper">
+<section id="intro-wrapper" class="pb-5 pb-md-auto">
   <div class="container">
     <div class="row">
       <div class=" col-12 col-md-8">
-        <h1 class="editable">Insurers can't predict the next climate crisis, but we are getting close</h1>
+        <h1 class="editable text-center text-md-left">Insurers can't predict the next climate crisis, but we are getting close</h1>
 
       </div>
-      <div class="col-12 col-md-6 editable">
-        <h2 class="editable  my-4 pr-5">Kettle is building a better re/insurance model for balancing risk in a changing climate.</h2>
+      <div class="col-12 col-md-6 editable text-center text-md-left">
+        <h2 class="editable  my-4 pr-md-5 ">Kettle is building a better re/insurance model for balancing risk in a changing climate.</h2>
         <p class="editable my-3">Schedule a demo of our latest fire prediction model</p>
         <a class="btn editable" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
       </div>
