--- a/src/index.html
+++ b/src/index.html
@@ -90,57 +90,90 @@ team_member:
   </div>
 </section>
 
-<section class="bg-gray pt-0">
-  <div class="container p-5 mb-5" id="how-reinsurance-works">
+<section class="bg-gray pt-0 px-3 px-lg-auto">
+  <div class="container p-3 p-lg-5 mb-5" id="how-reinsurance-works">
     <div class="row">
       <div class="col-12">
-        <h1 class="editable">How Reinsurance Works</h1>
+        <h1 class="editable mb-4">How Reinsurance Works</h1>
       </div>
     </div>
     <div class="row ">
 
       <div class="col-12 col-lg ||  stage-step" id="step-1">
-        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
-        <div class="bg-gray px-3 py-2 wrapper">
-          <p class="small text-uppercase text-salmon text-bold mb-0">
-            Insurer
-          </p>
-          <p class="text-black  m-0">
-            Customer
-          </p>
+        <div class="row centered  my-3">
+          <div class="col-3 col-lg-12 px-0 centered">
+            <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
+          </div>
+          <div class="col-9 col-lg-12">
+            <div class="bg-gray px-3 py-2 wrapper">
+              <p class="small text-uppercase text-salmon text-bold mb-0">
+                Insurer
+              </p>
+              <p class="text-black  m-0">
+                Customer
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="col-12 col-lg || stage-step" id="step-2">
-        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
-        <p class="small">
-          Insurers buy reinsurance from Kettle.
-        </p>
+        <div class="row centered  my-3">
+          <div class="col-3 col-lg-12 px-0 centered">
+            <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
+          </div>
+          <div class="col-9 col-lg-12">
+            <p class="small pl-3">
+              Insurers buy reinsurance from Kettle.
+            </p>
+          </div>
+        </div>
       </div>
+
       <div class="col-12 col-lg || stage-step" id="step-3">
-        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
-        <p class="small">
-          We use our models to analyze their portfolios, and then charge them the calculated premium to reinsure their risk.
-        </p>
+        <div class="row centered  my-3">
+          <div class="col-3 col-lg-12 px-0 centered">
+            <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
+          </div>
+          <div class="col-9 col-lg-12">
+            <p class="small pl-3">
+              We use our models to analyze their portfolios, and then charge them the calculated premium to reinsure their risk.
+            </p>
+          </div>
+        </div>
       </div>
+
+
       <div class="col-12 col-lg || stage-step" id="step-4">
-        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
-        <p class="small">
-          Because our models are more accurate, we can offer more competitive pricing. </p>
+        <div class="row centered  my-3">
+          <div class="col-3 col-lg-12 px-0 centered ">
+            <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
+          </div>
+          <div class="col-9 col-lg-12">
+            <p class="small pl-3">
+              Because our models are more accurate, we can offer more competitive pricing.
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="col-12 col-lg || stage-step" id="step-5">
-        <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
-        <div class="bg-gray p-2">
-          <p class="small text-uppercase text-salmon text-bold mb-0">
-            KETTLE
-          </p>
-          <p class="text-black ">Transfers Risk to Buyers</p>
-
+        <div class="row centered align-items-start my-3">
+          <div class="col-3 col-lg-12 px-0 centered">
+            <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
+          </div>
+          <div class="col-9 col-lg-12">
+            <div class="bg-gray p-2">
+              <p class="small text-uppercase text-salmon text-bold mb-0">
+                KETTLE
+              </p>
+              <p class="text-black m-0">Transfers Risk to Buyers</p>
+            </div>
+            <p class="small mt-2 ">
+              We transfer that risk to buyers through Kettle’s network market for capital markets, retros, and reinsurers.
+            </p>
+          </div>
         </div>
-        <p class="small">
-          We transfer that risk to buyers through Kettle’s network market for capital markets, retros, and reinsurers.
-        </p>
       </div>
 
 
