--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,6 @@ team_member:
     <div class="row">
       <div class=" col-12 col-md-8">
         <h1 class="editable text-center text-md-left">Insurers can't predict the next climate crisis, but we are getting close</h1>
-
       </div>
       <div class="col-12 col-md-6 editable text-center text-md-left">
         <h2 class="editable  my-4 pr-md-5 ">Kettle is building a better re/insurance model for balancing risk in a changing climate.</h2>
@@ -73,7 +72,6 @@ team_member:
       </div>
     </div>
     <div class="row centered align-items-baseline">
-
       <div class="col-12 col-md-4 editable text-center">
         <img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" />
         <p class="editable ">Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
@@ -189,24 +187,23 @@ team_member:
       </div>
     </div>
     <div class="row mt-5">
-
     </div>
     <div class="row text-center">
-      <div class="col-12 col-md-4  my-4 my-md-auto">
+      <div class="col-12 col-md-4  my-4 ">
         <h2 class="editable">3 Tredecillion (3X1042)</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
         <img class="img-fluid" src="/img/icons/kettle-icon-technology-3-tridecillion.svg" alt="Calculations" />
       </div>
-      <div class="col-12 col-md-4 my-4 my-md-auto">
+      <div class="col-12 col-md-4 my-4 ">
         <h2 class="editable">42 Million</h2>
         <p class="small text-uppercase editable mb-0  text-white">
           Simulations
         </p>
         <img class="img-fluid " src="/img/icons/kettle-icon-technology-simulations.svg" alt="Simulations" />
       </div>
-      <div class="col-12 col-md-4  my-4  my-md-auto">
+      <div class="col-12 col-md-4  my-4 ">
         <h2 class="editable">115,456</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Neural Network Nodes
@@ -235,28 +232,23 @@ team_member:
 <section class="bg-black" style="background: url(/img/backgrounds/bg-space-top.svg); background-size: 100% auto; background-position: center bottom; background-repeat: no-repeat; ">
   <div class="container">
     <div class="row centered mb-5">
-      <div class="col-12 col-md-5">
+      <div class="col-12 col-lg-5">
         <h1 class="editable">Predicting the California Wildfires</h1>
         <p class="editable text-white">Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.</p>
         <a href="" class="btn animated-border" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
       </div>
-      <div class="col-12 col-md-7">
+      <div class="col-12 col-lg-7">
         <div id="kettle-tablet-wrapper">
-          <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
+          <img id="kettle-tablet" class="img-fluid" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
           <video autoplay loop>
             <source src="/video/intro_gtpgsr.mp4" type="video/mp4" />
           </video>
         </div>
-
-
       </div>
     </div>
     <div class="container py-5 my-5">
-
     </div>
-
   </div>
-
 </section>
 
 
